--- a/Jax_Tutorial.ipynb
+++ b/Jax_Tutorial.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "Jax Tutorial",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN4GD4h5CTc5Xi416h2aPmb",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,8 +21,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Deepchavda007/Jax_Tutorial/blob/main/Jax_Tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {
         "id": "7Id2IzJP3dp0"
       },
@@ -62,7 +74,7 @@
         },
         "outputId": "f67becc2-9b87-4ec3-daf9-49bb88b36b79"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -104,7 +116,7 @@
         },
         "outputId": "e559d9b1-7ab4-42c2-bdad-7296d86cef38"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -152,7 +164,7 @@
         },
         "outputId": "26a21511-065d-4350-e945-a2b7396ae12f"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +196,7 @@
         },
         "outputId": "655c859e-56ce-4438-ec4a-f2ca4cf05383"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +225,7 @@
         },
         "outputId": "b8e7bd3f-8c72-48f1-87d7-ef88de25a23b"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +265,7 @@
         },
         "outputId": "565b5823-3a01-4d33-b9e8-39ed99605ba1"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,7 +321,7 @@
         "id": "ru2Jjl2y8jJ9",
         "outputId": "fd41c1f9-d28f-4364-fa76-e03e5a35dcf4"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +353,7 @@
         "id": "gor2ZVKdBfGb",
         "outputId": "9beba9cc-563c-4483-8698-a5a17f5943c4"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -370,7 +382,7 @@
         "id": "JwCy4mRz86sB",
         "outputId": "a0f04ef6-7a98-4dee-8df1-7c837c07b8bb"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +414,7 @@
         "id": "ewXp40kzBtBz",
         "outputId": "36aa5d07-f693-4e61-935c-abb73fb5fad6"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +448,7 @@
         "id": "f-vZSjhSB7P_",
         "outputId": "badf335b-e03b-4f76-cd2e-bdd3a33fafd3"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -459,7 +471,7 @@
       "metadata": {
         "id": "CQ6Av_mCCN3I"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -485,7 +497,7 @@
         "id": "-dqOItK_9jwr",
         "outputId": "b449498b-ba69-49fc-a541-75fee0fef581"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +532,7 @@
         "id": "y7ahi8YM-wwP",
         "outputId": "b6b38ced-8dc7-42b1-c623-93aa40b4a34e"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +563,7 @@
         "id": "BYrKpR52-2Lv",
         "outputId": "dd1bebc1-1511-44f6-b83c-244a84a4e961"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +602,7 @@
         "id": "wwrEPMOc_2__",
         "outputId": "31cedf4a-e79f-429a-c72a-41d7f2a7cf76"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
